[fix] to bottom of feed not showing

--- a/client/src/components/home/content_switcher/content_switcher.sass
+++ b/client/src/components/home/content_switcher/content_switcher.sass
@@ -2,7 +2,8 @@
 @import '../../globals/globals.sass'
 
 .content__switcher
-  padding: 2em 3em 0em 3em
+  padding: 2em 3.5em 0 3em
   background-color: $whitesmoke
-  overflow: auto
-  max-height: calc(100vh - 56px)
+  height: 100%
+  overflow-y: scroll
+  position: absolute
