--- a/client/src/components/home/content_switcher/feed/createPost/createPost.sass
+++ b/client/src/components/home/content_switcher/feed/createPost/createPost.sass
@@ -7,10 +7,11 @@
   grid-template-columns: repeat(3, 36px 2fr)
   grid-template-rows: 40px
   align-items: center
-  margin-bottom: 1em
+  margin-bottom: .8em
 
   #quote
     max-height: 30px
+    margin-left: 6px
   //   background-color: yellow
   //   box-shadow: 0px 1px 3px 1px gold
 
@@ -21,7 +22,7 @@
   //   box-shadow: 0px 1px 3px 1px magenta
 
   #pencil
-    max-height: 24px
+    max-height: 28px
     margin-left: 6px
   //   background-color: aquamarine
   //   box-shadow: 0px 1px 3px 1px lightskyblue
