--- a/client/src/components/home/content_switcher/feed/feed.sass
+++ b/client/src/components/home/content_switcher/feed/feed.sass
@@ -4,6 +4,7 @@
 .feed
   display: grid
   grid-template-columns: 5fr 2fr
+  padding-bottom: 4em
 
   .user__posts
     padding-right: 3em
