--- a/client/src/components/home/home.sass
+++ b/client/src/components/home/home.sass
@@ -7,12 +7,16 @@
   grid-template-rows: auto
   grid-template-areas: "navbar navbar" "links content"
   height: 100vh
+  position: relative
+  overflow: hidden
 
 .nav__bar
   grid-area: navbar
+  height: 3.5em
 
 .links
   grid-area: links
+  height: calc(100vh - 3.5em)
 
 .content__switcher
   grid-area: content
