--- a/client/src/components/home/nav/nav.sass
+++ b/client/src/components/home/nav/nav.sass
@@ -6,7 +6,7 @@
   display: grid
   grid-template-columns: 14em 1fr 8em
   grid-template-rows: $navbar-height
-  padding: .3em 1.3em 0 1.3em
+  padding: 0 1.3em 0 1.3em
   box-shadow: 0px 8px 8px -7px $shadow
   align-content: center
   z-index: 5
@@ -16,9 +16,10 @@
 
   a
     color: black
-    font-size: $text-x-large
     margin: .4em 0 0 .5em
+    font-size: $text-x-large
     font-family: $logo-font
+    text-transform: lowercase
 
 /* -- searchbar -- */
 .search__bar
